--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -61,9 +61,9 @@
 
       <div class="social-links text-center">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+				<a href="#" class="tiktok"><i class="bi bi-tiktok"></i></a>
+        <!--<a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>-->
       </div>
 
     </div>
@@ -78,7 +78,7 @@
         <div class="row content">
           <div class="col-lg-6">
             <h2>NEFT-SEC</h2>
-            <h3>Nuestra app te brindara la seguridad que hace falta.</h3>
+            <h3>Nuestra app te brinda la seguridad que te hace falta.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
