--- a/views/users/login.gohtml
+++ b/views/users/login.gohtml
@@ -44,7 +44,7 @@
                               <div class="col-lg-12">
                                  <div class="form-group">
                                     <label class="text-secondary">Email</label>
-                                    <input class="form-control" type="email" placeholder="Enter Email">
+                                    <input class="form-control" id="email" name="email" type="email" placeholder="Enter Email">
                                  </div>
                               </div>
                               <div class="col-lg-12 mt-2">
@@ -53,7 +53,7 @@
                                          <label class="text-secondary">Password</label>
                                          <label><a href="/forgot">Forgot Password?</a></label>
                                      </div>
-                                    <input class="form-control" type="password" placeholder="Enter Password">
+                                    <input class="form-control" id="password" name="password" type="password" placeholder="Enter Password">
                                  </div>
                               </div>
                            </div>
