--- a/views/layouts/dashboard.gohtml
+++ b/views/layouts/dashboard.gohtml
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Datum | CRM Admin Dashboard Template</title>
+      <title>CRM PROTO GT</title>
       
       <!-- Favicon -->
       <link rel="shortcut icon" href="/assets/images/favicon.ico" />
