--- a/views/crm/home.gohtml
+++ b/views/crm/home.gohtml
@@ -135,7 +135,7 @@
                         <td>{{ formatDate .CreatedAt}}</td>
                        <td>{{.Material.Name}} | {{.Material.Color}}</td>
                        <td>
-                          {{.Costumer.Name}}
+                          {{.Customer.Name}}
                        </td>
                        <td> {{range .Products}}
                         {{ .Name }} 
