--- a/views/crm/products.gohtml
+++ b/views/crm/products.gohtml
@@ -92,13 +92,12 @@
                                                 <td class="">
                                                     <div class="active-project-1 d-flex align-items-center mt-0 ">
                                                         <div class="h-avatar is-medium">
-                                                            <img class="avatar rounded-circle" alt="user-icon" src="/assets/images/products/{{.Picture}}">
+                                                            <img class="avatar rounded-circle" src="/assets/images/products/{{.Picture}}">
                                                         </div>
                                                         <div class="data-content">
                                                             <div>
                                                             <span class="font-weight-bold">{{.Name}}</span>                           
                                                             </div>
-    
                                                         </div>
                                                     </div>
                                                 </td>
