--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -98,6 +98,47 @@
                                                                       </li>
                                           </ul>
                                       </li>
+
+
+
+
+
+                                      <li class=" sidebar-layout">
+                                                        <a href="#customerSidebar" class="collapsed svg-icon" data-toggle="collapse" aria-expanded="false">
+                                                              <i class="">
+                                                                      <svg xmlns="http://www.w3.org/2000/svg" width="18" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                                                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z" />
+                                                                      </svg>
+                                                                  </i>
+                                                              <span class="ml-2">Clientes</span>
+                                                              <svg xmlns="http://www.w3.org/2000/svg" class="svg-icon iq-arrow-right arrow-active" width="15" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                                                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+                                                              </svg>
+                                                          </a>
+                                                              <ul id="customerSidebar" class="submenu collapse" data-parent="#iq-sidebar-toggle">                        
+                                                                <li class=" sidebar-layout">
+                                                                    <a href="/customers" class="svg-icon">
+                                                                        <i class="">
+                                                                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z" />
+                                      </svg>
+
+                                                                        </i><span class="">Lista de clientes</span>
+                                                                    </a>
+                                                                </li>
+                                                                <li class=" sidebar-layout">
+                                                                                              <a href="/new-customer" class="svg-icon">
+                                                                                                  <i class="">
+                                                                                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+                                      </svg>
+
+
+                                                                                                  </i><span class="">Nuevo cliente</span>
+                                                                                              </a>
+                                                                                          </li>
+                                                              </ul>
+                                                          </li>
               </ul>
           </nav>
           <div class="pt-5 pb-5"></div>
