--- a/views/crm/addOrder.gohtml
+++ b/views/crm/addOrder.gohtml
@@ -23,6 +23,9 @@
         </div>
         <div class="col-lg-12 mb-3 d-flex justify-content-between">
             <h4 class="font-weight-bold d-flex align-items-center">Nuevo pedido</h4>
+            {{if .Alert}}
+                                    {{template "alert" .Alert}}
+                                {{end}}
         </div>
         <div class="col-lg-12">
             <div class="card">
@@ -40,7 +43,7 @@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="Text5" class="form-label font-weight-bold text-muted text-uppercase">Material</label>
-                            <select name="material" id="material">
+                            <select name="materialID" id="materialID">
                                 {{range .Yield.Materials}}
                                 <option data-price-per-1000g="{{.Price}}" value="{{.ID}}">{{.Name}} | {{.Color}} | Available: {{.Weight}} g.</option>
                                 {{end}}
@@ -48,7 +51,7 @@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="Text6" class="form-label font-weight-bold text-muted text-uppercase">customer</label>
-                            <select name="customer" id="customer">
+                            <select name="customerID" id="customerID">
                                 {{range .Yield.Customers}}
                                 <option value="{{.ID}}">{{.Name}}</option>
                                 {{end}}
@@ -56,16 +59,15 @@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="color" class="form-label font-weight-bold text-muted text-uppercase">Coste</label>
-                            <input type="text" class="form-control" name="costInput" id="costInput" placeholder="Coste" readOnly>
+                            <input type="text" class="form-control" name="cost" id="cost" placeholder="Coste" readOnly>
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="color" class="form-label font-weight-bold text-muted text-uppercase">Venta</label>
-                            <input type="text" class="form-control" name="sellingPriceInput" id="sellingPriceInput" placeholder="Venta" readOnly>
+                            <input type="text" class="form-control" name="sale" id="sale" placeholder="Venta" readOnly>
                         </div>
-
                 </div>
             </div>
-            
+        
             <div class="card">
                 <div class="card-body">
                     <div class="d-flex justify-content-end mt-3">
