--- a/views/crm/addProduct.gohtml
+++ b/views/crm/addProduct.gohtml
@@ -23,6 +23,9 @@
         </div>
         <div class="col-lg-12 mb-3 d-flex justify-content-between">
             <h4 class="font-weight-bold d-flex align-items-center">Nuevo producto</h4>
+            {{if .Alert}}
+            {{template "alert" .Alert}}
+            {{end}}
         </div>
         <div class="col-lg-12">
             <div class="card">
