refactor file upload

--- a/views/layouts/dashboard.gohtml
+++ b/views/layouts/dashboard.gohtml
@@ -59,6 +59,7 @@
     <script src="/assets/js/chart-custom.js"></script>
     <script src="/assets/js/charts/01.js"></script>
     <script src="/assets/js/charts/02.js"></script>
+    <script src="/assets/js/uploadNameForm.js"></script>
 
 </body>
 <!-- END: Body-->
