--- a/views/crm/orders.gohtml
+++ b/views/crm/orders.gohtml
@@ -28,6 +28,9 @@
                                     </svg>
                                     Añadir pedido
                                 </a>
+                                <button type="button" id="addRowBtn" class="btn btn-success">
+                    Agregar Producto
+                </button>
                             </div>
                         </div>
                     </div>                    
@@ -94,7 +97,8 @@
                                                 </td>
                                                 <td>
                                                     {{ range .Products}}
-                                                    {{.Name}} 
+                                                    {{.Name}} <a href="/assets/stl/products/{{.Stl}}" download>Descargar</a>
+                                                    <br>
                                                     {{end}}
                                                 </td>
                                                 <td>
@@ -143,5 +147,28 @@
                 </div>
             </div>
         </div>
+
+
+        <div id="exampleRow" style="display: none;">
+    <div class="col-md-6 mb-3">
+        <label for="Text1" class="form-label font-weight-bold text-muted text-uppercase">Product</label>
+        <select name="products[]" multiple>
+            {{range .Yield.Products}}
+            <option data-selling-price="{{.Price}}" data-weight="{{.Weight}}" value="{{.ID}}">{{.Name}}</option>
+            {{end}}
+        </select>
+    </div>
+    <div class="col-md-6 mb-3">
+        <label for="Text5" class="form-label font-weight-bold text-muted text-uppercase">Material</label>
+        <select name="materialID" id="materialID">
+            {{range .Yield.Materials}}
+            <option data-price-per-1000g="{{.Price}}" value="{{.ID}}">{{.Name}} | {{.Color}} | Available: {{.Weight}} g.</option>
+            {{end}}
+        </select>
+    </div>
+    <!-- ... Otros campos de la fila ... -->
+</div>
+<!-- Botón para agregar una nueva fila -->
+                
 {{end}}
 {{template "yield"}}
